add 11 to 13 chapter

--- a/chinese/第1章 引言.md
+++ b/chinese/第1章 引言.md
@@ -15,7 +15,7 @@
 
 **阅读本书所需的预备知识**：
 *   熟练掌握 **SQL** 语言和数据库基本概念。
-*   **熟悉PostgreSQL数据库的主要功能和机制**，如有过使用、管理或应用开发经验为佳。
+*   **熟悉PostgreSQL数据库的主要功能、语法、事务机制和隔离级别等基本概念**。本书不会赘述这些内容，而是直接深入内核设计和代码实现。
 *   具备 **C语言** 的阅读和编写能力（这是PostgreSQL的实现语言）。
 *   对操作系统（如进程、内存管理、文件系统）和数据结构的基本了解。
 *   拥有强烈的好奇心和动手实践的热情。
@@ -49,7 +49,7 @@ PostgreSQL 拥有庞大而复杂的代码库，任何书籍或文章都无法替
 
 ## 1.4 本书基于的版本
 
-为了保证内容的准确性和时效性，本书的代码讲解和实例分析均基于 **PostgreSQL 14**。我们选择该版本是因为它是一个成熟的长期支持（LTS）版本，拥有良好的稳定性，且其核心架构在后续版本中保持了高度的一致性。
+为了保证内容的准确性和时效性，本书的代码讲解和实例分析均基于 **PostgreSQL 14.19**。我们选择该版本是因为它是一个成熟的长期支持（LTS）版本，拥有良好的稳定性，且其核心架构在后续版本中保持了高度的一致性。
 
 尽管版本之间存在细微差异，但PostgreSQL的核心机制（如进程架构、MVCC、WAL、优化器框架）是相对稳定的。因此，您通过学习本书建立起来的知识体系，对于理解更高版本的PostgreSQL（如15、16乃至17）依然具有极高的价值。我们会尽量指出哪些是版本无关的核心概念，哪些是版本特定的实现细节。
 
@@ -62,80 +62,81 @@ PostgreSQL 拥有庞大而复杂的代码库，任何书籍或文章都无法替
 *   **第2章 搭建开发环境**：指导如何获取源代码、编译安装、配置调试环境。
 
 ### **第二部分：进程框架**
-*   **PG数据库架构**：整体架构概述，包括进程模型和内存结构。
-*   **进程产生与后端进程初始化过程**：深入解析PostgreSQL的多进程模型和进程启动流程。
-*   **信号机制**：讲解进程间通信和信号处理机制。
+*   **第3章 PG数据库架构**：整体架构概述，包括进程模型和内存结构。
+*   **第4章 进程产生与后端进程初始化过程**：深入解析PostgreSQL的多进程模型和进程启动流程。
+*   **第5章 信号机制**：讲解进程间通信和信号处理机制。
 
 ### **第三部分：SQL引擎**
-*   **解析器--语法解析**：基于Bison的语法分析和移进归约过程。
-*   **解析器--语义分析**：ParseTree的构建和语义分析。
-*   **优化器--查询重写**：查询树的重写过程和规则应用。
-*   **优化器--查询优化**：表达式、路径和计划的生成过程。
-*   **执行器--Portal管理**：游标和预备语句的执行管理。
-*   **执行器--算子**：各种执行算子的实现原理。
-*   **执行器--Slot处理**：元组的读写、过滤、投影和发送。
-*   **存储过程和函数**：存储过程、函数和匿名块的实现。
-*   **内置函数**：系统内置函数的实现机制。
-*   **数据类型系统**：操作符、操作符类和隐式转换的实现。
-*   **分区表**：表分区的实现原理和机制。
+*   **第6章 SQL引擎架构概述**：SQL引擎整体架构、执行流程和关键数据结构。
+*   **第7章 解析器——语法解析**：基于Bison的语法分析和移进归约过程。
+*   **第8章 解析器——语义分析**：ParseTree的构建和语义分析。
+*   **第9章 优化器——查询重写**：查询树的重写过程和规则应用。
+*   **第10章 优化器——查询优化**：表达式、路径和计划的生成过程。
+*   **第11章 执行器——Portal管理**：游标和预备语句的执行管理。
+*   **第12章 执行器——算子**：各种执行算子的实现原理。
+*   **第13章 执行器——Slot处理**：元组的读写、过滤、投影和发送。
+*   **第14章 存储过程和函数**：存储过程、函数和匿名块的实现。
+*   **第15章 内置函数**：系统内置函数的实现机制。
+*   **第16章 数据类型系统**：操作符、操作符类和隐式转换的实现。
+*   **第17章 分区表**：表分区的实现原理和机制。
 
 ### **第四部分：存储引擎**
-*   **行存（页结构与元组结构）**：堆表的页面布局和元组结构。
-*   **表的建立（包含临时表）**：表创建的物理过程和存储结构。
-*   **Vacuum与autovacuum**：MVCC清理机制的原理和实现。
-*   **PG段页式存储**：PostgreSQL的存储架构基础。
+*   **第18章 行存（页结构与元组结构）**：堆表的页面布局和元组结构。
+*   **第19章 表的建立（包含临时表）**：表创建的物理过程和存储结构。
+*   **第20章 Vacuum与autovacuum**：MVCC清理机制的原理和实现。
+*   **第21章 PG段页式存储**：PostgreSQL的存储架构基础。
 
 ### **第五部分：索引**
-*   **B-Tree、Hash、GiST、GIN索引**：各种索引类型的实现原理。
-*   **索引访问方法接口**：索引AM的统一接口设计。
-*   **实践：添加新的索引类型**：手把手指导如何扩展索引类型。
+*   **第22章 B-Tree、Hash、GiST、GIN索引**：各种索引类型的实现原理。
+*   **第23章 索引访问方法接口**：索引AM的统一接口设计。
+*   **第24章 实践：添加新的索引类型**：手把手指导如何扩展索引类型。
 
 ### **第六部分：事务机制**
-*   **CLog**：事务提交日志的实现原理。
-*   **事务提交与终止过程**：事务生命周期管理。
-*   **锁管理**：自旋锁、轻量级锁和常规锁的实现。
-*   **死锁处理**：死锁检测和解决机制。
-*   **Isolation and MVCC**：隔离级别和多版本并发控制的实现。
+*   **第25章 CLog**：事务提交日志的实现原理。
+*   **第26章 事务提交与终止过程**：事务生命周期管理。
+*   **第27章 锁管理**：自旋锁、轻量级锁和常规锁的实现。
+*   **第28章 死锁处理**：死锁检测和解决机制。
+*   **第29章 Isolation and MVCC**：隔离级别和多版本并发控制的实现。
 
 ### **第七部分：内存管理**
-*   **共享内存框架**：进程间共享内存的管理。
-*   **内存上下文**：层次化内存管理机制。
-*   **BufferMgr**：缓冲区管理器的实现和页面置换算法。
-*   **系统表缓存机制与InvalidMsg**：系统缓存的管理和失效机制。
+*   **第30章 共享内存框架**：进程间共享内存的管理。
+*   **第31章 内存上下文**：层次化内存管理机制。
+*   **第32章 BufferMgr**：缓冲区管理器的实现和页面置换算法。
+*   **第33章 系统表缓存机制与InvalidMsg**：系统缓存的管理和失效机制。
 
 ### **第八部分：日志与恢复**
-*   **日志的生成与写入**：WAL日志的生成和写入过程。
-*   **日志归档与恢复原理**：日志归档和PITR的实现。
-*   **日志回放/恢复**：崩溃恢复和日志重做过程。
+*   **第34章 日志的生成与写入**：WAL日志的生成和写入过程。
+*   **第35章 日志归档与恢复原理**：日志归档和PITR的实现。
+*   **第36章 日志回放/恢复**：崩溃恢复和日志重做过程。
 
 ### **第九部分：复制机制**
-*   **流复制**：物理流复制的实现原理。
-*   **逻辑复制**：逻辑复制的发布订阅模型和数据过滤。
+*   **第37章 流复制**：物理流复制的实现原理。
+*   **第38章 逻辑复制**：逻辑复制的发布订阅模型和数据过滤。
 
 ### **第十部分：高可用性与灾难恢复**
-*   **备节点提升机制**：故障切换和主备切换的实现。
-*   **节点回归机制**：节点重新加入集群的流程。
+*   **第39章 备节点提升机制**：故障切换和主备切换的实现。
+*   **第40章 节点回归机制**：节点重新加入集群的流程。
 
 ### **第十一部分：插件与扩展开发**
-*   **服务端编程接口（SPI）**：在C函数中执行SQL的接口。
-*   **用户定义函数（UDF）与数据类型**：扩展函数和数据类型的开发。
-*   **插件（Extension）系统**：扩展的打包、分发和管理。
-*   **实践：编写完整的扩展**：从零开始开发一个完整扩展。
+*   **第41章 服务端编程接口（SPI）**：在C函数中执行SQL的接口。
+*   **第42章 用户定义函数（UDF）与数据类型**：扩展函数和数据类型的开发。
+*   **第43章 插件（Extension）系统**：扩展的打包、分发和管理。
+*   **第44章 实践：编写完整的扩展**：从零开始开发一个完整扩展。
 
 ### **第十二部分：连接与外部数据**
-*   **前端/后端协议**：客户端-服务器通信协议。
-*   **外部数据包装器（FDW）**：FDW API的详细解析。
-*   **实践：编写简单的FDW**：连接自定义数据源的实现。
+*   **第45章 前端/后端协议**：客户端-服务器通信协议。
+*   **第46章 外部数据包装器（FDW）**：FDW API的详细解析。
+*   **第47章 实践：编写简单的FDW**：连接自定义数据源的实现。
 
 ### **第十三部分：调试、性能与社区**
-*   **常用调试技巧**：GDB调试、日志输出和断言处理。
-*   **性能分析工具**：查询性能分析和系统性能剖析。
-*   **阅读提交日志**：理解社区开发讨论的方法。
-*   **参与社区贡献**：补丁提交、代码评审和社区工作流程。
+*   **第48章 常用调试技巧**：GDB调试、日志输出和断言处理。
+*   **第49章 性能分析工具**：查询性能分析和系统性能剖析。
+*   **第50章 阅读提交日志**：理解社区开发讨论的方法。
+*   **第51章 参与社区贡献**：补丁提交、代码评审和社区工作流程。
 
 ### **附录**
-*   **重要数据结构详解**：核心数据结构的详细说明。
-*   **常用工具与命令参考**：开发工具和命令的使用指南。
-*   **推荐阅读与资源**：进一步学习的资料和资源。
+*   **附录A 重要数据结构详解**：核心数据结构的详细说明。
+*   **附录B 常用工具与命令参考**：开发工具和命令的使用指南。
+*   **附录C 推荐阅读与资源**：进一步学习的资料和资源。
 
 现在，请准备好您的编辑器、终端和调试器，让我们一同开启这段深入PostgreSQL内核的精彩旅程吧！
